Upgrade args to java 11 compatible